--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "checkstyle": "tslint -p . -c tslint.json",
     "test:e2e": "@powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./e2etest.ps1",
-    "webdriver-update": "webdriver-manager update"
+    "webdriver-update": "webdriver-manager clean && webdriver-manager update"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^3.5.1"
+    "typescript": "^3.5.1",
+    "wd": "^1.11.3"
   },
   "dependencies": {
     "@types/jasmine": "^3.3.13",
@@ -19,7 +20,7 @@
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "^4.2.1",
     "jasmine2-protractor-utils": "^1.3.0",
-    "protractor": "^5.4.2",
+    "protractor": "~5.4.1",
     "ts-node": "^8.2.0",
     "webdriver-manager": "12.1.4"
   }
